--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,120 +3,67 @@
     xmlns:tools ="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/welcome"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:id="@+id/app_logo"
+        android:layout_width="300dp"
+        android:layout_height="100dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="60dp"
+        android:src="@drawable/applogo"
+        />
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/ap_slogan"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
-        android:text="Create User"
-        android:textSize="100px"
-        android:textColor="#d3d8e3"
-        android:layout_alignParentTop = "true"
-        android:layout_centerHorizontal = "true"
-        android:layout_marginTop="450px" />
-
-    <EditText
-        android:id="@+id/user1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="40dp"
-        android:hint="username"
-        android:textColorHint="#8e9094"
-        android:textCursorDrawable="@null"
-        android:inputType="text"
-        android:drawableStart="@drawable/account"
-        android:drawablePadding="5dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="250dp"
-        android:gravity="start"/>
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="email"
-        android:textCursorDrawable="@null"
-        android:drawableStart="@drawable/email"
-        android:textColorHint="#8e9094"
-        android:drawablePadding="5dp"
-        android:inputType="textEmailAddress"
-        android:layout_marginRight="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="320dp"
-        android:id="@+id/email1"
-        android:gravity="start" />
-
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="First name"
-        android:textCursorDrawable="@null"
-        android:textColorHint="#8e9094"
-        android:drawableStart="@drawable/pencil"
-        android:drawablePadding="5dp"
-        android:inputType="text"
-        android:layout_marginRight="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="390dp"
-        android:id="@+id/fname"
-        android:gravity="start" />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Last name"
-        android:textCursorDrawable="@null"
-        android:textColorHint="#8e9094"
-        android:drawableStart="@drawable/pencil"
-        android:drawablePadding="5dp"
-        android:inputType="text"
-        android:layout_marginRight="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="460dp"
-        android:id="@+id/lname"
-        android:gravity="start" />
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="88dp"
+        android:layout_marginTop="140dp"
+        android:text="Aino Ista. Buy anything online"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimary"
+        android:textSize="22sp"
+        android:textStyle="bold|italic"
+        />
 
     <Button
+        android:id="@+id/main_login_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="CREATE"
-        android:id="@+id/create"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:background="@drawable/buttons"
+        android:padding="20dp"
         android:textAllCaps="false"
-        android:layout_marginRight="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="550dp"
-        android:textColor="#d3d8e3"
-        android:textSize="20dp"
-        android:onClick="create"
-        android:background="@drawable/round_button"
-        android:gravity="center"/>
+        android:textSize="18sp"
+        android:text="Already have an account? Login"
+        android:textColor="@color/white"
 
-    <TextView
-        android:id="@+id/data"
-        android:layout_width="wrap_content"
-        android:layout_height="23dp"
-        android:layout_marginTop="620dp"
-        android:layout_marginLeft="125dp"
-        android:fontFamily="sans-serif"
-        android:text="Check existing users over"
-        android:textColor="#d3d8e3"
-        android:textSize="12dp"
-        android:focusable="true" />
+        />
+    <Button
+        android:id="@+id/main_join_now_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/main_login_btn"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:background="@drawable/buttons"
+        android:padding="20dp"
+        android:textAllCaps="false"
+        android:textSize="18sp"
+        android:text="Sign Up"
+        android:textColor="@color/white"
 
-    <TextView
-        android:id="@+id/database"
-        android:layout_width="wrap_content"
-        android:layout_height="23dp"
-        android:layout_marginTop="620dp"
-        android:fontFamily="sans-serif-medium"
-        android:clickable="true"
-        android:text=" here."
-        android:layout_toEndOf="@+id/data"
-        android:textColor="#00d9d9"
-        android:textSize="12dp"
-        android:onClick="user"
-        android:focusable="true" />
+        />
+
+
 
 
 
