--- a/app/src/main/res/layout/product_items_layout.xml
+++ b/app/src/main/res/layout/product_items_layout.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:id="@+id/card_view"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="20dp"
     android:layout_marginStart="15dp"
@@ -39,11 +39,11 @@
             />
 
         <TextView
-            android:id="@+id/product_description"
+            android:id="@+id/product_category"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/product_price"
-            android:text="Product Description"
+            android:text="Product Category"
             android:textAlignment="center"
             android:textSize="16dp"
 
