Finish edit user profile functionality

--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -67,15 +67,14 @@
         android:id="@+id/profile_image_change_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Change Profile"
-        android:textSize="17sp"
-        android:textStyle="bold"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="4dp"
-        android:textColor="@android:color/black"
         android:layout_below="@+id/settings_profile_image"
         android:layout_centerHorizontal="true"
-        />
+        android:layout_marginTop="2dp"
+        android:layout_marginRight="10dp"
+        android:text="Update Profile"
+        android:textColor="@android:color/black"
+        android:textSize="17sp"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/setting_email"
