--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -48,19 +48,47 @@
         android:gravity="center"
         android:layout_marginTop="10dp" />
 
+    <TextView
+        android:id="@+id/count_in_stock"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/product_price_detail"
+        android:text="Count In stock"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:textSize="16sp"
+        android:gravity="center"
+        android:layout_marginTop="10dp" />
+
+
     <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
         android:id="@+id/number_btn"
-        android:layout_width="314dp"
-        android:layout_height="86dp"
-        android:layout_below="@id/product_price_detail"
+        android:layout_width="283dp"
+        android:layout_height="80dp"
+        android:layout_below="@id/count_in_stock"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="39dp"
         android:elevation="6dp"
-        app:finalNumber="10"
+        app:finalNumber="100"
         app:initialNumber="1"
         app:textSize="16dp">
 
     </com.cepheuen.elegantnumberbutton.view.ElegantNumberButton>
+
+    <Button
+        android:id="@+id/pd_add_to_cart_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimaryDark"
+        android:layout_margin="15dp"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:text="Add to Cart"
+        android:textColor="@android:color/white"
+        android:textSize="18dp"
+        />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_product_to_cart"
